--- a/index.html
+++ b/index.html
@@ -4,156 +4,161 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Test your skills</title>
+    <link rel="stylesheet" href="styles/index.css">
+    <script src="https://kit.fontawesome.com/f763c1516d.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&display=swap"
+        rel="stylesheet">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="styles/style.sass">
 </head>
 
 <body class="Artboard">
 
-    Här ska en grid finnas som centrerar allt, och en container
 
-    <img src="" alt="Background_picture_section_1">
+    <section class="container_header" style="background-image: url('styles/images/background_section_1.png');">
 
-    <section class="container_header">
-        <nav class="manu">
-            <a href="#why-choose-us">Why Choose Us</a>
-            <a href="#safe-travel">Safe Travel Anywhere</a>
-            <a href="#explore-places">EXPLORE PLACES</a>
-            <a href="#contact-us">CONTACT US</a>
-        </nav>
-        <div class="logo_container">
-            <img src="" alt="Logo">
-        </div>
-
-        <div class="rectangle_2>
-<img src="" alt=" Scroll Down">
-            <p>Scroll Down</p>
+        <div class="logo_header">
+            <img src="styles/images/logo.png" alt="Logo">
         </div>
 
         <div class="search_bar_container">
             <form id="search-form">
                 <input type="text" id="search-destination" placeholder="Search Your Travel Destination" required>
                 <button type="submit">Search</button>
-                <img src="" alt="forstoringsglas">
             </form>
         </div>
-
-        <div class="Rubrik">
-            <h1>BHROMAON</h1>
-            <h2>Safe Trafel Anywhere</h2>
+        <div class="rectangle_2">
+            <img src="styles/images/Down.png" alt="Scroll Down">
+            <p class="section_1_scroll_down">Scroll Down</p>
         </div>
+        <div>
+
+            <nav class="menu">
+                <a href="#who-we-are">WHO WE ARE</a>
+                <a href="#what-we-do">WHAT WE DO</a>
+                <a href="#travel-with-us">TRAVEL WITH US</a>
+                <a href="#contact-us">CONTACT US</a>
+            </nav>
+
+        </div>
+        <img src="styles/images/Rectangle_blue.png" alt="Rectangle_blue">
     </section>
 
-    <section class="container_Section_2_Why_Choose_us">
+
+
+
+    <section class="container_Section_2_Why_Choose_us"
+        style="background-image: url('styles/images/background_section\ 22.png');">
+
         <div class="container_text_section_2">
             <h2 class="rubrik_section_2">Why Choose Us</h2>
             <p class="text_section_2">Tion and dislike men who are so beguiled and demoralized by desire by the charms
                 of
-                pleasure of the moment, so blinded by desire, that they cannot foresee Ddislike men who are so beguiled
-                and demoralized by the charms of pleasure of the moment, so blinded by desire, that.</p>
+                pleasure of the moment, so blinded by desire, that they cannot foresee <br><br>
+                Ddislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by
+                desire, that.</p>
             <button class="button_section_2">Explore Places</button>
         </div>
+        <div class="pictures_section_2">
+            <img src="styles/images/picture_1_section_2.png" class="picture_1_section_2" alt="Nature_1_section_2">
+            <img src="styles/images/picture_2_section_2.png" class="picture_2_section_2" alt="Nature_2_section_2">
+        </div>
+    </section>
 
-        <img src="" alt="Nature_1_section_2">
-        <img src="" alt="Nature_2_section_2">
-        <section class="How It Works">
-            <img src="" alt="2_shapes">
-            <div class="search_1">
-                <img src="" alt="img_search_places_1">
-                <img src="" alt="img_search_places_2">
-            </div>
-            <div class="search_2">
-                <img src="" alt="img_select_places_1">
-                <img src="" alt="img_select_places_2">
-            </div>
-            <div class="search_3">
-                <img src="" alt="img_book_and_enjoy_1">
-                <img src="" alt="img_book_and_enjoy_2">
-            </div>
 
-        </section>
 
-        <section class="container_section_3">
-            <img src="" alt="Background_picture_section_3">
+    <section style="background-image: url('styles/images/Rectangle_9.png');">
+        <div class="how_it_works">
+            <img src="styles/images/shape_1.png" class="shape_01" alt="2_shapes">
+            <div class="container_search">
+                <div class="search_1">
+                    <img src="styles/images/shape_1_section_2.png" alt="img_search_places_1">
+                    <p class="text_search">Search places</p>
+                </div>
+                <div class="search_2">
+                    <img src="styles/images/shape_2_section_2.png" alt="img_select_places_1">¨
+                    <p class="text_search">Select Places</p>
+                </div>
+                <div class="search_3">
+                    <img src="styles/images/shape_3_section_2.png" alt="img_book_and_enjoy_1">
+                    <p class="text_search">Book&Enjoy</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+
+    <section class="background_section_4" style="background-image: url('styles/images/background_section_4.png');">
+
+        <div class="container_grey">
             <div class="grey_container_text_section_3">
                 <p class="mini_topic_section_3">Spain</p>
                 <h2 class="topic_section_3"> GRAND SPAIN MADRID</h2>
                 <p class="text_section_3">
                     But I must explain to you how all this mistaken idea of account to denouncing
                     pleasure and praising pain was account born and I account will give you a
-                    complete account of the system
-                </p>
-                <button class="Button_section_3">BOOK NOW</button>
+                    complete account of the system</p>
+                <div class="container_button_section_3">
+                    <button class="Button_section_3">BOOK NOW</button>
+                </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section class="container_section_4">
-            <img src="" alt="Background_picture_section_4">
-            <div class="grey_container_text_section_4">
-                <p class="mini_topic_section_4">Spain</p>
-                <h2 class="topic_section_4"> GRAND SPAIN MADRID</h2>
-                <p class="text_section_4">
+
+
+    <section class="background_section_5" style="background-image: url('styles/images/background_section_5.png');">
+
+        <div class="container_grey_section_5">
+            <div class="grey_container_text_section_3">
+                <p class="mini_topic_section_3">Spain</p>
+                <h2 class="topic_section_3"> GRAND SPAIN MADRID</h2>
+                <p class="text_section_3">
                     But I must explain to you how all this mistaken idea of account to denouncing
                     pleasure and praising pain was account born and I account will give you a
-                    complete account of the system
-                </p>
-                <button class="Button_section_3">BOOK NOW</button>
+                    complete account of the system</p>
+                <div class="container_button_section_3">
+                    <button class="Button_section_3">BOOK NOW</button>
+                </div>
             </div>
-        </section>
+        </div>
+    </section>
 
-        <section class="section_5_testimonial">
-            <h2 class="rubrik_section_4"> What Our Tourist Say</h2>
-            <div class="container_text_section_5">
+    <section class="section_5_testimonial" style="background-image: url('styles/images/background_section_6.png');">
+
+        <h2 class="rubrik_sam">What Our Tourist Say</h2>
+        <div class="container_bild_text_section_6">
+            <img src="styles/images/picture_sam.png" class="picture_sam" alt="Sam">
+            <div class="container_text_section_6">
                 <h3 class="rubrik_section_5">Sam Sumon</h3>
-                <p> But I must explain to you how all this mistaken idea of account to
+                <p class="section_6_text"><span class="quote"><i class="fa-solid fa-quote-left"></i></span> But I must
+                    explain to you how all this mistaken
+                    idea of account to
                     denouncinpleasure and praising pain But I must explain to you how all this
                     mistaken idea of account to nai denouncing pleasure and praising pain was account
                     born and I account will give you a complete account of the system was account
                     born and I account will give you a nai the complete account of the system</p>
             </div>
-            <img src="" alt="picture_sam_sumon">
-        </section>
-
-        <footer class="container_footer">
-            <img src="" alt="logo">
-            <p class="text_under_logo_footer">Safe travel anywhere</p>
-            <div class="container_footer_icons">
-                <img src="" alt="facebook_logo">
-                <img src="" alt="x_logo">
-                <img src="" alt="linkedin_logo">
-                <img src="" alt="youtube_logo">
-                <img src="" alt="pinterest_logo">
-            </div>
-        </footer>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        </div>
     </section>
 
-
-
-
-
-
+    <section class="section_5_testimonial"
+        style="background-image: url('styles/images/background_section_footer.png');">
+        <footer>
+            <img class="footer_logo" src="styles/images/logo.png" alt="logo">
+            <div class="container_footer_icons">
+                <i class="fa-brands fa-facebook-f"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-linkedin-in"></i>
+                <i class="fa-brands fa-youtube"></i>
+                <i class="fa-brands fa-pinterest"></i>
+            </div>
+        </footer>
+    </section>
 
 </body>
 
